assets/css/style.css
/* ... */
fieldset {
    display: inline-block;
    width: 50%;
    margin: 5% 25%;
    padding: 1em;
    background-color: rgba(254, 255, 255, 0.6);
    border: none;
}

#backgroundform {
    background-image: url("../images/reception1.jpeg");
    height: 900px;
    width: 100%;
    margin: auto;
    position: relative;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.first-name,
.email {
    width: 42%;
    height: 25px;
    margin: 10px 20px;
    color: #013328;
    background: transparent;
    border: 2px solid #013328;
    display: block;
    float: left;

}

.surname,
.mobile-number {
    width: 42%;
    height: 25px;
    margin: 10px 20px;
    color: #013328;
    background: transparent;
    border: 2px solid #013328;
    display: block;
    float: right;
}

.natureofenquiry,
.yourenquiry {
    width: 94%;
    height: 25px;
    margin: 20px 20px;
    color: #013328;
    background: transparent;
    border: 2px solid #013328;
    font-family: "EB Garamond", serif;
}

.yourenquiry {
    height: 90px;
}

input::placeholder {
    color: #013328;
    background: transparent;
    font-family: "EB Garamond", serif;
}

textarea::placeholder {
    color: #013328;
    font-family: "EB Garamond", serif;
}

#button1 {
    border: 2px solid #013328;
    background-color: #013328;
    color: #eed9c4;
    margin: 20px;
    font-family: "EB Garamond", serif;
    width: 100px;
}

#button1:hover,
#button1:focus,
#button1:active {
    background-color: #eed9c4;
    color: #013328;
    transition: 0.7s;
}

#contactdetails {
    text-align: center;
    background-color: rgba(254, 255, 255, 0.6);
}

#contactmap {
width: 100%;
height:300px; 
border:0;
}

/*SERVICES PAGE*/

.container1 {
    display: flex;
    flex-direction: column;
}

.section1,
.section2,
.section3 {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

.design {
    flex: 1;
}

.design img {
    padding: 10px;
    height: 600px;
    width: 400px;
}

.servicetext {
    color: #013328;
    font-family: "EB Garamond", serif;
    font-size: 20px;
    text-align: center;
    justify-content: center;
    padding: 5%;
}

/*PROJECTS*/
.containimages {
    margin: 20px;
    clear: both;
    gap: 20px;
    column-count: 3;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.gallery {
    position: relative;
    width: 400px;
    height: 600px;
    border: solid #013328 1px;
      }

/*overlay text for images - code inspired from here: https://www.w3schools.com/howto/howto_css_image_overlay.asp*/

  .image {
    display: block;
    width: 100%;
    height: 100%;
  }

  .overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: 0.5s ease;
    background-color: rgba(254, 255, 255, 0.6);
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  .gallery:hover .overlay {
    opacity: 1;
  }
  
  .text {
    color: #013328;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
  }

/* LAPTOP VIEW - 1200 px*/

@media only screen and (max-width: 1200px) and (min-width:1050px) {
  /*header*/

    .social-networks {
    font-size: medium;
   }
#logo {
    font-size: 190%;
}
   .menu li {
    font-size: 90%;
   }

    .design img {
        flex-direction: column;
        height: 550px;
        width: 350px;
    }
    #slogan {
        position: absolute;
        top: 400px;
        left: 20%;
    }
    .servicetext {
        font-size: 19px
    }

    .container-nav {
        flex-direction: column;
    }
    .section1 .section2 .section3 {
        flex-direction: column;
    }

    footer {
        padding: 25px;
    }

}

/* SCREEN REDUCED - 1050 - 768 px*/
@media only screen and (max-width: 1050px) and (min-width: 768px) {
    .section1 .section2 .section3 {
        flex-direction: column;
    }

    .design img {
        height: 350px;
        width: 250px;
        margin-top: 100px;
    }

    .servicetext {
        font-size: 16px
    }

    #logo{
        font-size: 190%;
    }

    .menu {
      font-size: 90%;
    }

    #slogan {
        position: absolute;
        top: 400px;
        left: 15%;
    }

    #design-message {
        top: 60%;
    }
    fieldset {
        margin-left: 20%;
        width: 60%;
        margin-top: 5%;
    }

    .first-name,
    .email {
        width: 42%;
        height: 25px;
        margin: 10px 20px;
        color: #013328;
        background: transparent;
        border: 2px solid #013328;
        display: block;
        float: left;
    
    }
    
    .surname,
    .mobile-number {
        width: 42%;
        height: 25px;
        margin: 10px 20px;
        color: #013328;
        background: transparent;
        border: 2px solid #013328;
        display: block;
        float: right;
    }

    footer {
        padding: 20px;
    }
}
/* ... */

